front-end/app/styles/_card-lg.scss
.card-lg {
  position: relative;

  md-card-content {
    padding: $md-padding * 1.5;
  }

  h2 {
    color: $heading-color;
    font-size: 1.5rem;
    font-weight: normal;
    margin-top: 0;
  }
  h3 {
    color: $heading-color;
    font-size: $font-medium;
    font-weight: normal;
  }
  .md-button {
    font-weight: 400;
  }
  .card-menus {
    position: absolute;
    top: 0;
    right: 0;
    z-index: 1;
    margin-top: $md-padding * 1.5;

    @media (max-width: $layout-breakpoint-sm) {
      position: static;
      justify-content: flex-end;
      order: -1;
    }

    .md-button {
      margin: 0;
    }
  }

  .md-body-2 {
    margin: $md-padding/2 0;
  }

  .card-media {
    position: relative;
    height: auto;

    .pick {
      position: absolute;
      padding: 10px;
      left: 0;
      transition: display 1s cubic-bezier(0.25, 0.8, 0.25, 1);
      z-index: 10;
      cursor: pointer;
      visibility: hidden;

      md-icon {
        color: rgba(255, 255, 255, 1);
        text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
      }

      .checked {
        display: none;
      }

      &:hover {
        .checked {
          display: block;
        }

        .unchecked {
          display: none;
        }
      }
    }

    &.active {
      .pick {
        visibility: visible;
      }

      .checked {
        display: block;
      }

      .unchecked {
        display: none;
      }
    }

    &:hover {
      .card-lg__overlay {
        visibility: visible;
      }
      .pick {
        visibility: visible;
      }
    }
  }

  .card-cover {
    border-radius: 0;
    &:hover {
      background-color: $selected-gray;

      .card-hover {
        opacity: .8;
        z-index: 3;

        md-icon {
          color: rgba(255, 255, 255, 1);
          text-shadow: 1px 1px 1px rgba(0, 0,0, .6);
        }
      }
    }

    img {
      @media (min-width: $layout-breakpoint-xs) {
        height: auto;
      }
    }
  }
  .left-side {
    padding: $md-padding;
    position: relative;
    md-divider {
      margin-right: -$md-padding;
    }
  }
  .right-side {
    position: relative;
    display: block;
    border-left: none;
    padding-left: $md-padding;
    @media (min-width: $layout-breakpoint-xs) {
      border-left-width: 1px;
      border-left-style: solid;

      border-left-color: $border-color;
    }
    md-content {
      margin-top: $md-padding;
      p {
        margin: $md-padding/2 0;
      }
    }
  }
  md-card-actions {
    .md-button {
      margin-left: -$md-padding/2;
    }
  }
}

.summary-card {
  margin-bottom: 1.5rem;
}

.learning-object-title {
  margin: 0;
  position: relative;
  z-index: 2;

  @media (max-width: $layout-breakpoint-sm) {
    max-width: 100% !important;
    font-size: 1.5rem;
  }
}

// New styles

.card-lg__actions {
  margin: 0;
}

.review__label {
  color: rgba(0,0,0, .37);
  font-size: $font-small;
}

.review__link {
  margin: 0 !important;

  md-icon {
    color: rgba(0,0,0, .37);
  }
  &:hover {
    text-decoration: none;
  }
}

.card-lg__container {
  padding: $md-padding * 1.5;
  position: relative;
  overflow: hidden;

  @media (max-width: $layout-breakpoint-sm) {
    flex-direction: column;
    padding-top: 0;
  }

  &--border-left {
    border: none;

    @media (min-width: 600px) {
      border-left: 1px solid  rgba(0, 0, 0, 0.12);
    }
  }

  &--padding-l-r {
    padding-top: 0;
    padding-bottom: 0;
  }

  &--padding-l-r-t {
    padding-bottom: 5px;
  }

  &--padding-l-r-b {
    padding-top: 0;
  }

  &--actions {
    padding: $md-padding/2 $md-padding;

    &--border-left {
      border-top: 1px solid rgba(0, 0, 0, 0.12);

      @media (min-width: $layout-breakpoint-xs) {
        border-top: none;
      }
    }
  }
}

.card-lg__overlay {
  visibility: hidden;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0,0,0,0.4);
  display: flex;
  align-items: flex-end;
  color: white;
}

.card-lg__link {
  a {
    color: $gray-d;

    &:hover {
      color: #15c;
    }
  }
}

.card-lg__licenses {
  margin-left: $md-padding/8;
}

.higherIndex {
  z-index: 10;
}

.card-header--flex-basis{
  flex-basis:auto;
}

